# yggdrasil

./: INSTALL_CN.txt  INSTALL_EN.txt  INSTALL_JP.txt  README.md  begin_test_env_android_termux_arm32-debug.sh  begin_test_env_android_termux_arm32.sh  begin_test_env_android_termux_arm64-debug.sh  begin_test_env_android_termux_arm64.sh  begin_test_env_android_termux_riscv64-debug.sh  begin_test_env_android_termux_riscv64.sh  begin_test_env_android_termux_x86-debug.sh  begin_test_env_android_termux_x86.sh  begin_test_env_android_termux_x86_64-debug.sh  begin_test_env_android_termux_x86_64.sh  begin_test_env_darwin_x64.sh  begin_test_env_darwin_x64d.sh  begin_test_env_linux_x32.sh  begin_test_env_linux_x32d.sh  begin_test_env_linux_x64.sh  begin_test_env_linux_x64d.sh  build_and_format_jni_yggr_cpp11.sh  build_and_format_jni_yggr_cpp14.sh  build_and_format_jni_yggr_cpp17.sh  build_and_format_jni_yggr_cpp20.sh  build_and_format_jni_yggr_devel_cpp11.sh  build_and_format_jni_yggr_devel_cpp14.sh  build_and_format_jni_yggr_devel_cpp17.sh  build_and_format_jni_yggr_devel_cpp20.sh  build_and_format_jni_yggr_lib_only_cpp11.sh  build_and_format_jni_yggr_lib_only_cpp14.sh  build_and_format_jni_yggr_lib_only_cpp17.sh  build_and_format_jni_yggr_lib_only_cpp20.sh  build_and_format_jni_yggr_test_only_cpp11.sh  build_and_format_jni_yggr_test_only_cpp14.sh  build_and_format_jni_yggr_test_only_cpp17.sh  build_and_format_jni_yggr_test_only_cpp20.sh  build_and_format_jni_yggr_test_server_client_cpp11.sh  build_and_format_jni_yggr_test_server_client_cpp14.sh  build_and_format_jni_yggr_test_server_client_cpp17.sh  build_and_format_jni_yggr_test_server_client_cpp20.sh  (+202 more)
.github/: README-en_us.md  README-ja.md
active_svr_test/: active_balance_svr_test.cpp  active_svr_test.vcxproj  active_svr_test_cpp03.vcxproj  active_svr_test_cpp14.vcxproj  active_svr_test_cpp17.vcxproj  active_svr_test_cpp20.vcxproj  active_svr_test_cpp20.vcxproj.filters  active_svr_test_linux.cbp  active_svr_test_linux_cpp11.cbp  active_svr_test_linux_cpp14.cbp  active_svr_test_linux_cpp17.cbp  active_svr_test_linux_cpp20.cbp  active_svr_test_mingw.cbp  active_svr_test_mingw_cpp11.cbp  active_svr_test_mingw_cpp14.cbp  active_svr_test_mingw_cpp17.cbp  active_svr_test_mingw_cpp20.cbp  config.hpp  handler_reg.hpp  init_server.cpp  init_server.hpp  plugin_setup.hpp
clt_test/: clt_test_async.vcxproj  clt_test_async_cpp03.vcxproj  clt_test_async_cpp14.vcxproj  clt_test_async_cpp17.vcxproj  clt_test_async_cpp20.vcxproj  clt_test_async_cpp20.vcxproj.filters  clt_test_async_linux_cpp03.cbp  clt_test_async_linux_cpp11.cbp  clt_test_async_linux_cpp14.cbp  clt_test_async_linux_cpp17.cbp  clt_test_async_linux_cpp20.cbp  clt_test_async_mingw_cpp03.cbp  clt_test_async_mingw_cpp11.cbp  clt_test_async_mingw_cpp14.cbp  clt_test_async_mingw_cpp17.cbp  clt_test_async_mingw_cpp20.cbp  clt_test_static_task_center_balance.vcxproj  clt_test_static_task_center_balance2.vcxproj  clt_test_static_task_center_balance2_cpp03.vcxproj  clt_test_static_task_center_balance2_cpp14.vcxproj  clt_test_static_task_center_balance2_cpp17.vcxproj  clt_test_static_task_center_balance2_cpp20.vcxproj  clt_test_static_task_center_balance2_cpp20.vcxproj.filters  clt_test_static_task_center_balance2_linux_cpp03.cbp  clt_test_static_task_center_balance2_linux_cpp11.cbp  clt_test_static_task_center_balance2_linux_cpp14.cbp  clt_test_static_task_center_balance2_linux_cpp17.cbp  clt_test_static_task_center_balance2_linux_cpp20.cbp  clt_test_static_task_center_balance2_mingw_cpp03.cbp  clt_test_static_task_center_balance2_mingw_cpp11.cbp  clt_test_static_task_center_balance2_mingw_cpp14.cbp  clt_test_static_task_center_balance2_mingw_cpp17.cbp  clt_test_static_task_center_balance2_mingw_cpp20.cbp  clt_test_static_task_center_balance_cpp03.vcxproj  clt_test_static_task_center_balance_cpp14.vcxproj  clt_test_static_task_center_balance_cpp17.vcxproj  clt_test_static_task_center_balance_cpp17.vcxproj.filters  clt_test_static_task_center_balance_cpp20.vcxproj  clt_test_static_task_center_balance_linux.cbp  clt_test_static_task_center_balance_linux_cpp11.cbp  (+24 more)
dll_cal_test/: dll_cal_test_cpp03.vcxproj  dll_cal_test_cpp14.vcxproj  dll_cal_test_cpp17.vcxproj  dll_cal_test_cpp20.vcxproj  dll_cal_test_linux.cbp  dll_cal_test_linux_cpp11.cbp  dll_cal_test_linux_cpp14.cbp  dll_cal_test_linux_cpp17.cbp  dll_cal_test_linux_cpp20.cbp  dll_cal_test_mingw.cbp  dll_cal_test_mingw_cpp11.cbp  dll_cal_test_mingw_cpp14.cbp  dll_cal_test_mingw_cpp17.cbp  dll_cal_test_mingw_cpp20.cbp
dll_param_test/: dll_param.hpp  dll_param_test.vcxproj  dll_param_test.vcxproj.filters  dll_param_test_cpp03.vcxproj  dll_param_test_cpp14.vcxproj  dll_param_test_linux.cbp  dll_param_test_mingw_cpp03.cbp
encryption_tool_clt_test/: encryption_tool_clt_test.vcxproj  encryption_tool_clt_test_cpp03.vcxproj  encryption_tool_clt_test_cpp14.vcxproj  encryption_tool_clt_test_cpp14.vcxproj.filters  encryption_tool_clt_test_cpp17.vcxproj  encryption_tool_clt_test_mingw.cbp  (+10 more)
tools/lua/lua5_46/CMakeDarwin/lua5_46/lua546_static_ts/: CMakeLists.txt
(+18887 files in other folders)
