#lua546_static_ts CMakeLists.txt

project(lua546_static_ts)

message(STATUS "build-sub-project [ lua546_static_ts ]")

set(var_proj_name lua546_static_ts)

set(var_root_proj_dir ${PROJECT_SOURCE_DIR}/../../..)
set(var_proj_src_dir ${var_root_proj_dir}/lua546_static_ts)

set(var_proj_src_list 
		${var_proj_src_dir}/../lua546/lapi.c
		${var_proj_src_dir}/../lua546/lauxlib.c
		${var_proj_src_dir}/../lua546/lbaselib.c
		${var_proj_src_dir}/../lua546/lcode.c
		${var_proj_src_dir}/../lua546/lcorolib.c
		${var_proj_src_dir}/../lua546/lctype.c
		${var_proj_src_dir}/../lua546/ldblib.c
		${var_proj_src_dir}/../lua546/ldebug.c
		${var_proj_src_dir}/../lua546/ldo.c
		${var_proj_src_dir}/../lua546/ldump.c
		${var_proj_src_dir}/../lua546/lfunc.c
		${var_proj_src_dir}/../lua546/lgc.c
		${var_proj_src_dir}/../lua546/linit.c
		${var_proj_src_dir}/../lua546/liolib.c
		${var_proj_src_dir}/../lua546/llex.c
		${var_proj_src_dir}/../lua546/lmathlib.c
		${var_proj_src_dir}/../lua546/lmem.c
		${var_proj_src_dir}/../lua546/loadlib.c
		${var_proj_src_dir}/../lua546/lobject.c
		${var_proj_src_dir}/../lua546/lopcodes.c
		${var_proj_src_dir}/../lua546/loslib.c
		${var_proj_src_dir}/../lua546/lparser.c
		${var_proj_src_dir}/../lua546/lstate.c
		${var_proj_src_dir}/../lua546/lstring.c
		${var_proj_src_dir}/../lua546/lstrlib.c
		${var_proj_src_dir}/../lua546/ltable.c
		${var_proj_src_dir}/../lua546/ltablib.c
		${var_proj_src_dir}/../lua546/ltm.c
		${var_proj_src_dir}/../lua546/lundump.c
		${var_proj_src_dir}/../lua546/lutf8lib.c
		${var_proj_src_dir}/../lua546/lvm.c
		${var_proj_src_dir}/../lua546/lzio.c
)

set(var_proj_bin_outdir ${var_root_proj_dir}/${USRDEF_CMAKE_BIN_OUTDIR})
set(var_proj_lib_outdir ${var_root_proj_dir}/${USRDEF_CMAKE_LIB_OUTDIR})
set(var_proj_ach_outdir ${var_proj_lib_outdir})

set(var_proj_include_dirs 
		${var_proj_src_dir}
		${var_proj_src_dir}/../include
		${USRDEF_CMAKE_INCLUDE_DIRS}
)

set(var_proj_c_defineds_tmp "-DLUA_COMPAT_5_1 -DLUA_COMPAT_5_2 -DYGGR_LUA_THREAD_SAFE ${USRDEF_CMAKE_DEFINEDS}")

if("${USRDEF_CMAKE_OSX_SDK_NAME}" STREQUAL "macosx")
	set(var_proj_c_defineds "-DLUA_USE_MACOSX ${var_proj_c_defineds_tmp}")
else()
	set(var_proj_c_defineds "-DLUA_USE_IOS ${var_proj_c_defineds_tmp}")
endif()

set(var_proj_c_defineds_debug "-D_DEBUG ${USRDEF_CMAKE_DEFINEDS_DEBUG}")

set(var_proj_c_defineds_release "-DNDEBUG ${USRDEF_CMAKE_DEFINEDS_RELEASE}")

set(var_proj_c_flags "-Wall -Werror=endif-labels -Werror=return-type -Wno-comment -Wno-enum-compare -Wno-multichar -Wno-sign-compare -Wno-unused-local-typedefs -fPIC -fdata-sections -fexceptions -ffunction-sections -fno-strict-aliasing ${USRDEF_CMAKE_CFLAGS}")

set(var_proj_c_flags_debug "-O0 -g ${USRDEF_CMAKE_CFLAGS_DEBUG}")

set(var_proj_c_flags_release "-O3 ${USRDEF_CMAKE_CFLAGS_RELEASE}")

set(var_proj_cxx_flags 
		-frtti
		${USRDEF_CMAKE_CXXFLAGS}
)

set(var_proj_cxx_flags_debug 
		${USRDEF_CMAKE_CXXFLAGS_DEBUG}
)

set(var_proj_cxx_flags_release 
		${USRDEF_CMAKE_CXXFLAGS_RELEASE}
)

set(var_proj_link_libs_dirs 
		${USRDEF_CMAKE_LD_LIBRARY_PATH}
)

set(var_proj_link_libs 
		${USRDEF_CMAKE_LD_LIBRARY}
)

set(var_proj_link_libs_debug 
		${USRDEF_CMAKE_LDFLAGS_DEBUG}
)

set(var_proj_link_libs_release 
		${USRDEF_CMAKE_LD_LIBRARY_RELEASE}
)

set(var_proj_ldflags 
		${USRDEF_CMAKE_LDFLAGS}
)

set(var_proj_ldflags_debug 
		${USRDEF_CMAKE_LDFLAGS_DEBUG}
)

set(var_proj_ldflags_release 
		${USRDEF_CMAKE_LDFLAGS_RELEASE}
)

if(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Debug"))
	set(var_proj_out_name lua504_ts${USRDEF_CMAKE_COMPILER_VERSION_TAG}-s-d)
	set(var_proj_c_defineds "${var_proj_c_defineds_debug} ${var_proj_c_defineds}")
	set(var_proj_c_flags "${var_proj_c_flags_debug} ${var_proj_c_flags}")
	set(var_proj_cxx_flags "${var_proj_cxx_flags_debug} ${var_proj_cxx_flags} ${var_proj_c_defineds}")
	set(var_proj_link_libs ${var_proj_link_libs_debug} ${var_proj_link_libs})
	set(var_proj_ldflags "${var_proj_ldflags_debug} ${var_proj_ldflags}")
else()
	set(var_proj_out_name lua504_ts${USRDEF_CMAKE_COMPILER_VERSION_TAG}-s)
	set(var_proj_c_defineds "${var_proj_c_defineds_release} ${var_proj_c_defineds}")
	set(var_proj_c_flags "${var_proj_c_flags_release} ${var_proj_c_flags}")
	set(var_proj_cxx_flags "${var_proj_cxx_flags_release} ${var_proj_cxx_flags} ${var_proj_c_defineds}")
	set(var_proj_link_libs ${var_proj_link_libs_release} ${var_proj_link_libs})
	set(var_proj_ldflags "${var_proj_ldflags_release} ${var_proj_ldflags}")
endif()

include_directories(${var_proj_include_dirs})
add_definitions(${var_proj_c_defineds})
set(CMAKE_C_FLAGS ${var_proj_c_flags})
set(CMAKE_CXX_FLAGS ${var_proj_cxx_flags})

add_library(${var_proj_name} ${var_proj_src_list})

set_target_properties( 
	${var_proj_name}
	PROPERTIES
	OUTPUT_NAME ${var_proj_out_name}
	RUNTIME_OUTPUT_DIRECTORY ${var_proj_bin_outdir}
	LIBRARY_OUTPUT_DIRECTORY ${var_proj_lib_outdir}
	ARCHIVE_OUTPUT_DIRECTORY ${var_proj_ach_outdir}
)

